Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-11115

Setting compression to brotli can hit DCHECK

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • Impala 4.1.0
    • Impala 4.1.0
    • Backend
    • None
    • ghx-label-3

    Description

      In a debug build:
      set COMPRESSION_CODEC=brotli;
      create table lineitem_brotli stored as parquet as select * from tpch.lineitem;

      in FATAL log:
      F0209 22:31:19.760239 31082 codec.cc:65] e745b39957ec8836:1e0e47e400000000] Check failed: false Missing codec in COMPRESSION_MAP: BROTLI

      Attachments

        Activity

          People

            csringhofer Csaba Ringhofer
            csringhofer Csaba Ringhofer
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: